<resources>
    <string name="app_name">GeekNews</string>
    <string name="news_sources">News Sources</string>
    <string name="wired">Wired</string>
    <string name="ars">Ars Technica</string>
    <string name="recode">Recode</string>
    <string name="engadget">Engadget</string>
    <string name="hackernews">Hacker News</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">geeknews.chundi.biz</string>
    <string name="content_authority">biz.chundi.geeknews</string>
    <string name="wiredSrc">wired.de</string>
    <string name="recodeSrc">recode</string>
    <string name="arsSrc">ars-technica</string>
    <string name="engadgetSrc">engadget</string>
    <string name="hackernewsSrc">hacker-news</string>
    <string name="top">top</string>
    <string name="poplr">popular</string>
    <string name="lat">latest</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="videos_button">Show related videos</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="article_text_parser_src">positionlogger.com</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="poweredBy">Powered By News API 2017.</string>
    <string name="imgDesc">The Article image</string>
    <string name="vidDesc">The Youtube Video Thumbnail</string>
    <string name="shrDesc">Sharing Desc</string>
    <string name="article_image">article image</string>
    <string name="no_news_articles">No News Articles</string>
    <string name="imgurl">image_url</string>
    <string name="title">title</string>
    <string name="arturl">article_url</string>
    <string name="newsrc">newsSrc</string>
    <string name="type">Type</string>
    <string name="topC">Top</string>
    <string name="latC">Latest</string>
    <string name="shareBody">Here is the share content body</string>
    <string name="subject">Subject Here</string>
    <string name="share">Share via</string>
    <string name="latestvid">Latest Videos</string>
    <string name="admobId">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Newsrc">NewsSrc</string>
    <string name="selpos">select-pos</string>
    <string name="intrntNotAvlbl">Internet not available</string>
    <string name="loadart">LoadArticles :</string>
    <string name="newsssource">News Source</string>
    <string name="reddit">reddit-r-all</string>

</resources>
